fixed featured row alignment on tablet

--- a/src/page-sections/home/feature-row/feature-row.module.scss
+++ b/src/page-sections/home/feature-row/feature-row.module.scss
@@ -94,9 +94,7 @@ $landing-title-color: #4a4a4a;
   }
 
   .image {
-    img {
-      padding-left: 1rem;
-    }
+    padding: 0 2px 0 0 !important
   }
 }
 
